mainefests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: bipin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image:  
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
