mainefests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  labels:
    name: todoapp
  namespace: bipin
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: todoui.bipink.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoapp
            port: 
              number: 80
